Re-factor and test, more stability
More stability on paths
Better zip/folder handling

--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "FileEncryptor",
   "version": "0.1.0",
   "author": "Guillermo Blanco",
-  "main": "main.js",
+  "main": "./main.js",
   "dependencies": {
     "file-encryptor": "^0.1.0",
-    "archiver": "*",
+    "fs-extra": "*",
+    "adm-zip": "*",
     "prompt": "*",
     "commander": "*",
     "async": "*",
